--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "core-js": "^2.5.1",
+    "intrinio-realtime": "^2.0.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
   },
